# git-lessons

./: .gitconfig  README.md  db.py  main.py  pyproject.toml
.github/workflows/: run-tests.yml
app/: main.py  test_main.py
